--- a/strings_and_factors.Rmd
+++ b/strings_and_factors.Rmd
@@ -8,6 +8,7 @@ output: github_document
 ```{r setup, include = FALSE}
 library(tidyverse)
 library(rvest)
+library(p8105.datasets)
 
 knitr::opts_chunk$set(
   fig.width = 6,
@@ -150,4 +151,55 @@ marj_df %>%
   geom_point() +
   theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
 ```
+
+## Restaurant Inspection
+
+```{r}
+data("rest_inspec")
+```
+
+```{r}
+rest_inspec %>%
+  janitor::tabyl(boro, grade)
+```
+
+```{r}
+rest_inspec = 
+  rest_inspec %>%
+  filter(
+    str_detect(grade, c("[ABC]")),
+    !(boro == "Missing")
+  ) %>%
+  mutate(boro = str_to_title(boro))
+```
+
+```{r}
+rest_inspec %>%
+  filter(str_detect(dba, "[Pp][Ii][Zz][Zz][Aa]")) %>%
+  janitor::tabyl(boro, grade)
+```
+
+```{r}
+rest_inspec %>%
+  filter(str_detect(dba, "[Pp][Ii][Zz][Zz][Aa]")) %>%
+  mutate(
+    boro = fct_infreq(boro)
+  ) %>%
+  ggplot(aes(x = boro, fill = grade)) +
+  geom_bar()
+```
+
+What about changing a label ...
+
+```{r}
+rest_inspec %>%
+  filter(str_detect(dba, "[Pp][Ii][Zz][Zz][Aa]")) %>%
+  mutate(
+    boro = fct_infreq(boro),
+    boro = fct_recode(boro, "The City" = "Manhattan")
+  ) %>%
+  ggplot(aes(x = boro, fill = grade)) +
+  geom_bar()
+```
+
 
